<resources>
    <string name="app_name">UniSICMA</string>
    <string name="changelang">Select Language</string>
    <string name="ANM_login">ANM LOGIN</string>
    <string name="ADMIN_login">ADMIN LOGIN</string>
    <string name="welcome">Welcome</string>
    <string name="password">Enter Password</string>
    <string name="anm">Enter ANM ID</string>
    <string name="login_anm">ANM LOGIN</string>
    <string name="npass">Password not Remember?</string>
    <string name="nregister">New Registration</string>
    <string name="login_admin">ADMIN LOGIN</string>
    <string name="adhar">Enter Aadhar ID</string>
    <string name="admin_id">Enter Admin ID</string>
    <string name="mother_card">Scan Mother Card</string>
    <string name="login">Login</string>
    <string name="clear">Clear</string>
    <string name="register">Register</string>
    <string name="reg_form">Registration Form</string>
    <string name="mobile">Enter Mobile</string>
    <string name="re_pass">Re-Enter Password</string>
    <string name="workplan">Workplan</string>
    <string name="rip">Routine Immunization</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="logout">Logout</string>
    <string name="bar_code">Authenticate Barcode</string>
    <string name="rch_mother">RCH Mother ID</string>
    <string name="mother_name">Mother Name</string>
    <string name="mother_mobile">Mother Mobile</string>
    <string name="father_name">Father\'s Name</string>
    <string name="h_mobile">Father\'s Mobile</string>
    <string name="f_name">Facility Name</string>
    <string name="c_id">RCH Child ID</string>
    <string name="due_vaccination">Child Vaccination Details</string>
    <string name="v_proceed">Proceed for Vaccination</string>
    <string name="v_received">Vaccines Received</string>
    <string name="about">About  NRP-APP</string>
    <string name="search">Search</string>
    <string name="anm_id_validate">ANM ID must not be empty</string>
    <string name="anm_pass_validate">Password field must not be empty</string>
    <string name="remained">Vaccines Due</string>
    <string name="dueDate">Due Date</string>
    <string name="redCode">Due for more than 2 months</string>
    <string name="yellowCode">Due for more than a week</string>
    <string name="greenCode">For Current Workplan</string>
    <string name="upload">Upload Records</string>
    <string name="general_workplan">GENERAL WORKPLAN</string>
    <string name="facility_id">Facility ID</string>
    <string name="village">Village</string>
    <string name="sc">Sub-Center</string>
    <string name="block">Block</string>
    <string name="records">Children for Vaccination</string>
    <string name="general_dueList">Due List</string>
    <string name="choose_vaccine">Select any Vaccine</string>
    <string name="choose_day">Choose Day for RI</string>
    <string name="monday">Monday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="date_wise">Date wise Due List</string>
    <string name="vaccine_wise">Vaccine wise Due List</string>
    <string name="choose">Select Any Option</string>
    <string name="authenticate">Enter a Valid ANM ID and Password.!</string>
    <string name="response">Response..</string>
    <string name="no_id">ANM ID does not exists.!</string>
    <string name="vaccination_section">CHILD VACCINATION SECTION</string>
    <string name="child_weight">Weight of Child</string>
    <string name="enter_weight">Enter weight of Child</string>
    <string name="vaccine_id">Vaccine ID</string>
    <string name="vaccine_name">Vaccine Name</string>
    <string name="dosage">Dosage</string>
    <string name="submit">Submit Record</string>
    <string name="barcode_match">No Matched Record Found</string>
    <string name="no_record">No Record Found.!</string>
    <string name="invalidInput">Invalid ANM ID or Password.!</string>
    <string name="sync">Download Records</string>
    <string name="insert">One Record Inserted.!</string>
    <string name="scheduled">Scheduled RI</string>
    <string name="synchronize">Synchronize Records</string>
    <string name="total_records">Total Children Under ANM</string>
    <string name="no_due">No Due Vaccine</string>
    <string name="m_id">Mother ID</string>
    <string name="child_id">Child ID</string>
    <string name="dob">DOB</string>
    <string name="lvd">Last Visit Date</string>
    <string name="biometric">Scan Child Biometric</string>
    <string name="matches">Finger Print Matches</string>
    <string name="not_matches">Finger Print Does Not Matches</string>
    <string name="child_details">CHILD DETAILS</string>
    <string name="scan_vaccine">Scan vaccine</string>
    <string name="v_given">Vaccines Given</string>
    <string name="next_child">Next Child</string>
    <string name="card">Do you have RCH Card ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="barcode_matches">QR Code Matches</string>
    <string name="scan_again">Scan Again</string>
    <string name="continue_vac">Do you want to continue Vaccination ?</string>
    <string name="all_given">All the Vaccines have been provided.!</string>
    <string name="next_proceed">Proceed with Next Child</string>
    <string name="already_given">is Already Given</string>
    <string name="dismiss">Dismiss</string>
    <string name="given">is Given</string>
    <string name="ok">OK</string>
    <string name="not_due">is not Due for any Vaccine</string>
    <string name="back">Back</string>
    <string name="next_vaccine">Next Vaccine</string>
    <string name="status">Status</string>
    <string name="ww">Weekly Workplan</string>
    <string name="daywise">Day wise Workplan and Duelist</string>
    <string name="contactAdmin">Contact Admin</string>
    <string name="blankNames">Some Children have blank values for language interface</string>
    <string name="no_admin">Invalid Admin ID or Admin ID does not exists</string>
    <string name="anm_mobile">Mobile</string>
    <string name="dueUpto">Records Due Up to</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="c_name">Child Name</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_data">No data</string>
    <string name="unknown_service">Unknown Service</string>
    <string name="unknown_characteristic">Unkown Characteristic</string>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="tab_text_1">Workplan</string>
    <string name="tab_text_2">Duelist</string>
    <string name="color">Color Notations</string>
    <string name="close">Close</string>
    <string name="facility_details">Facility Details</string>
    <string name="to">To</string>
    <string name="sarojini">Punitha F</string>
    <string name="sync_vaccines">Sync Vaccines</string>
    <string name="nrp_app">NRP-APP</string>
    <string name="app_info">NRP or Nagrik Rog Pratirakshak App is an Android application which is to serve to purpose of identifying the Infants or Children for vaccination and provide vaccination to them by eliminating the paper based entries using biometric techniques</string>


</resources>
