<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".asha_Register"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_form"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/anm"
            android:id="@+id/RCH_id"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"

            android:id="@+id/mobile"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"

            android:id="@+id/PASSword"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:inputType="textPassword" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/re_pass"

            android:id="@+id/re_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:inputType="textPassword" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:id="@+id/reg_clear"
                android:layout_weight="1"
                android:background="@color/colorRed"
                android:layout_marginTop="100dp"
               android:layout_margin="6dp"/>

            <Button
                android:id="@+id/asha_Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="6dp"
                android:layout_marginTop="100dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"

                android:padding="5dp"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textStyle="bold"

                />
        </LinearLayout>

    </LinearLayout>


</ScrollView>
