<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:padding="10dp"
    android:elevation="3dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:padding="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/redColor"
                android:layout_width="30dp"
                android:layout_height="10dp"
                android:layout_margin="5dp"
                android:background="#FF6666" />

            <TextView
                android:id="@+id/defineRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/redCode"
                 />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yellowColor"
                android:layout_width="30dp"
                android:layout_height="10dp"
                android:layout_margin="5dp"
                android:background="#FFFFCC" />

            <TextView
                android:id="@+id/defineYellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/yellowCode"
                 />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/greenColor"
                android:layout_width="30dp"
                android:layout_height="10dp"
                android:layout_margin="5dp"
                android:background="#90ee90" />

            <TextView
                android:id="@+id/defineGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/greenCode"
                 />
        </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/close"
        android:background="@color/colorBlue"
        android:textColor="@color/colorGreen"
        android:id="@+id/close_btn"
        />

    </LinearLayout>

