<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ADMIN_LOGIN">


    <include layout="@layout/toolbar_layout" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/unisicma"
        android:scaleType="fitXY"
        android:id="@+id/logo"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:elevation="5dp"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#384186"
            android:padding="5dp">

            <TextView
                android:textSize="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_admin"
                android:textColor="@color/colorYellow"
                android:layout_gravity="center_horizontal" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputRCH"
            android:layout_margin="5dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/admin_id"
                android:layout_gravity="center_horizontal"
                android:id="@+id/ADMIN_id" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputPassword"
            android:layout_margin="5dp"

            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_gravity="center_horizontal"
                android:id="@+id/ADMIN_password" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:layout_gravity="left"
                android:id="@+id/admin_clear"
                android:layout_weight="1"
                android:background="@color/colorError"
                android:layout_marginTop="80dp"
                android:textColor="@color/colorYellow"
                android:layout_margin="6dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@color/colorPrimaryDark"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:layout_marginTop="80dp"
                android:id="@+id/admin_Login"
                android:textColor="#FFFFFF"
                android:layout_margin="6dp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/npass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_horizontal"
        android:id="@+id/New_Password"
        android:clickable="true" />


    <TextView
        android:textSize="15sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nregister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_horizontal"
        android:id="@+id/new_registration"
        android:clickable="true" />

</LinearLayout>