<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity"

    >
  <!--  android:background="@drawable/images"-->

    <include layout="@layout/toolbar_layout" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:src="@drawable/unisicma" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/welcome"
        android:textSize="36dp"
       android:textColor="#404B8A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="60dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/changelang"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:background="@color/cardview_shadow_start_color"
            android:text="@string/changelang"
            android:textColor="#FFFF" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:background="@color/cardview_shadow_start_color"
            android:onClick="ANM_login"
            android:text="@string/ANM_login"
            android:textColor="#FFFF" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:background="@color/cardview_shadow_start_color"
            android:onClick="Admin_login"
            android:text="@string/ADMIN_login"
            android:textColor="#FFFF" />
    </LinearLayout>

</LinearLayout>