<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:padding="7dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:srcCompat="@drawable/ic_face_black_24dp"

            />

        <TextView
            android:id="@+id/child_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/image"
            android:layout_toRightOf="@+id/image"
            android:gravity="center"
            android:text="first"
            android:textSize="18dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/facility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/child_name"
            android:layout_toEndOf="@+id/image"
            android:layout_toRightOf="@+id/image"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:text="@string/dob" />

        <View
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="1sp"
            android:layout_below="@id/facility"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/image"
            android:layout_toRightOf="@+id/image"
            android:background="@color/cardview_shadow_start_color" />


        <TextView
            android:id="@+id/child_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_toEndOf="@+id/image"
            android:layout_toRightOf="@+id/image"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:text="@string/child_id" />

        <TextView
            android:id="@+id/mother_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/child_Id"
            android:layout_toEndOf="@+id/image"
            android:layout_toRightOf="@+id/image"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:text="@string/m_id" />

        <TextView
            android:id="@+id/duedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mother_Id"

            android:layout_toEndOf="@+id/image"
            android:layout_toRightOf="@+id/image"
            android:layout_weight="1"
            android:text="@string/lvd" />

        <TextView
            android:id="@+id/LastVisitDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/duedate"
            android:layout_toRightOf="@+id/duedate"
            android:layout_below="@+id/mother_Id"
            android:paddingLeft="2dp"
            android:text="" />

    </RelativeLayout>
</LinearLayout>

